mongodb-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb-replica
spec:
  serviceName: mongo
  replicas: 2
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
        selector: mongo
    spec:
      terminationGracePeriodSeconds: 30
      serviceAccount: mongo-account
      containers:
        - name: mongodb
          image: docker.io/mongo:4.2
          command: ["/bin/sh"]
          args: ["-c", "mongod --replSet=rs0 --bind_ip_all"]
          resources:
            limits:
              cpu: 1
              memory: 1500Mi
            requests:
              cpu: 1
              memory: 1000Mi
          ports:
            - name: mongo-port
              containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mongo-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 20Gi
