news_spider.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: news-spider
  labels:
    app: news-spider
spec:
  replicas: 1
  selector:
    matchLabels:
      app: news-spider
  template:
    metadata:
      labels:
        app: news-spider
    spec:
      containers:
        - args:
            - node
            - index.js
          name: news-spider
          image: docker.io/xinli940207/news_spider:1.1.3
