nlp_services.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nlp-services
  labels:
    app: nlp-services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nlp-services
  template:
    metadata:
      labels:
        app: nlp-services
    spec:
      containers:
        - args:
            - python
            - server.py
          name: nlp-services
          image: docker.io/xinli940207/nlp_services:1.1.1
