news_spider_api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: news-spider-api
  labels:
    app: news-spider-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: news-spider-api
  template:
    metadata:
      labels:
        app: news-spider-api
    spec:
      containers:
        - args:
            - npm
            - start
          name: news-spider-api
          image: docker.io/xinli940207/news_spider_api:1.1.2
          ports:
            - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: news-spider-api
spec:
  type: LoadBalancer
  ports:
    - port: 5000
  selector:
    app: news-spider-api
