news_spider_frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: news-spider-frontend
  labels:
    app: news-spider-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: news-spider-frontend
  template:
    metadata:
      labels:
        app: news-spider-frontend
    spec:
      containers:
        - args:
            - yarn
            - start
          name: news-spider-frontend
          image: docker.io/xinli940207/news_spider_frontend:1.0.0
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: news-spider-frontend
spec:
  type: LoadBalancer
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: news-spider-frontend
